# net

./: .gitignore  .gitmodules  .yapfignore  CMakeLists.txt  main.py
cmake/: FindPI.cmake
depends/: .gitignore  setup.sh
depends/allie-dev/: PKGBUILD
depends/bmv2/: PKGBUILD
depends/ebpf-depends/: PKGBUILD
depends/grpc/: .gitignore  PKGBUILD  python-grpcio-use-system-abseil.patch
depends/p4c/: .gitignore  PKGBUILD
depends/pi/: PKGBUILD  fix-libmicrohttpd-compatibility.patch
depends/protobuf/: PKGBUILD
depends/ptf/: .gitignore  PKGBUILD
depends/python-nnpy/: PKGBUILD
depends/thrift/: PKGBUILD
examples/: logparser.py  plot.py
examples/00.4ary-pod/: Makefile  invariants.json  run_network.py
examples/01.triangle/: Makefile  invariants.json  run_network.py
examples/02.fat-tree/: Makefile  README.md  invariants.json  run_network.py
scripts/: build.sh  style.sh
src/: constants.hpp  constants.py  controller.cpp  controller.hpp  controller.py  dfa.py  ecmp.py  hash.cpp  hash.hpp  host.cpp  host.hpp  interface.cpp  interface.hpp  invariant.cpp  invariant.hpp  invariants.py  ipv4.cpp  ipv4.hpp  ipv4.py  link.cpp  link.hpp  loopinvariant.cpp  loopinvariant.hpp  main.cpp  network.cpp  network.hpp  network.py  node.cpp  node.hpp  p4_mininet.py  p4counterentry.cpp  p4counterentry.hpp  p4runtimemgr.cpp  p4runtimemgr.hpp  p4tableentry.cpp  p4tableentry.hpp  packethandler.cpp  packethandler.hpp  packetset.cpp  packetset.hpp  (+19 more)
src/p4runtime_lib/: bmv2.py  convert.py  error_utils.py  helper.py  simple_controller.py  switch.py
